src/snapshots/libgooey__resolution__tests__fail_server_in_shared.snap
---
source: src/resolution.rs
expression: err
---
No packages were found that matched (Shared) biff/server@>=1.0.0, <2.0.0.
Are you sure this is a Shared dependency?
