src/snapshots/libgooey__resolution__tests__minimal.snap
---
source: src/resolution.rs
expression: resolve
---
activated:
  - biff/minimal@0.1.0
metadata:
  biff/minimal@0.1.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
shared_dependencies: {}
server_dependencies: {}
dev_dependencies: {}

