src/snapshots/libgooey__resolution__tests__one_dependency_yes_upgrade-2.snap
---
source: src/resolution.rs
expression: new_resolved
---
activated:
  - biff/minimal@1.1.0
  - biff/one-dependency@1.0.0
metadata:
  biff/minimal@1.1.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
  biff/one-dependency@1.0.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
shared_dependencies:
  biff/one-dependency@1.0.0:
    Minimal: biff/minimal@1.1.0
server_dependencies: {}
dev_dependencies: {}

